--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,6 +1,9 @@
 @charset "utf-8";
 
 @import
+    "partials/mediaqueries",
+    "partials/mixins",
+    "partials/functions",
     "partials/header",
     "partials/footer",
     "partials/content";
