--- a/src/assets/css/partials/_header.scss
+++ b/src/assets/css/partials/_header.scss
@@ -1,59 +1,31 @@
 header {
 
-    background-color: yellow;
-    width: 300px;
-
-    @media #{$medium} {
-        width: 500px;
-    }
+    background-color: white;
+    width: 100%;
 
     nav {
-        background-color: pink;
+        background-color: white;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.11);
+
+        ul {
+            list-style: none;
+            display: flex;
+            padding: 0;
+            margin: 0;
+
+            li {
+                margin-right: 15px; // Adjust spacing as needed
+            }
+        }
+
+        a {
+            text-decoration: none;
+            color: #2A2A2A;
+            padding: 10px 15px; // Add padding for better clickability
+            &:hover {
+                border-bottom: 1px solid #CF00A9;
+            }
+        }
     }
 
-
-}
-
-
-header {
-
-    > nav {
-        background-color: pink;
-    }
-
-}
-
-header {
-
-    &:after {
-        content: "yo";
-        font-size: 50px;
-    }
-      
-}
-
-.test1 {
-    &.test2 {
-        background-color: tomato;
-    }
-}
-
-%btn {
-    font-size: 40px;
-    border: 1px solid black;
-    border-radius: 100px;
-    padding: 10px 20px;
-}
-
-.btn2 {
-    @extend %btn;
-    background-color: blueviolet;
-}
-
-
-
-
-
-.btn2 {
-    @include example(red);
 }
