--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -6,4 +6,5 @@
     "partials/functions",
     "partials/header",
     "partials/footer",
-    "partials/content";
+    "partials/content",
+    "partials/fonts";
