--- a/src/assets/css/partials/_content.scss
+++ b/src/assets/css/partials/_content.scss
@@ -1,44 +1,3 @@
-
-@font-face {
-    font-family: 'NeueMontreal';
-    src: url('/fonts/NeueMontreal/PPNeueMontreal-Book.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'NeueMontreal';
-    src: url('/fonts/NeueMontreal/PPNeueMontreal-Medium.woff') format('woff');
-    font-weight: medium;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'NeueMontreal';
-    src: url('/fonts/NeueMontreal/PPNeueMontreal-Bold.woff') format('woff');
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'NeueMontreal';
-    src: url('/fonts/NeueMontreal/PPNeueMontreal-Italic.woff') format('woff');
-    font-weight: normal;
-    font-style: italic;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Tobias';
-    src: url('/fonts/Tobias/TobiasTRIAL-RegularItalic.woff') format('woff');
-    font-weight: thin;
-    font-style: italic;
-    font-display: swap;
-}
-
 body {
     background-color: #FAFAFA;
     font-family: 'NeueMontreal';
@@ -47,34 +6,50 @@ body {
     color: #2A2A2A;
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 #hero-section {
 
-    background-color: #EEEEEE;
+    background:
+        radial-gradient(87.7% 67.58% at 36.85% 100%, rgba(255, 140, 0, 0.20) 0%, rgba(255, 255, 255, 0.00) 100%),
+        radial-gradient(164.48% 79.58% at 8.96% 100%, rgba(255, 0, 255, 0.20) 0%, rgba(255, 255, 255, 0.00) 100%),
+        linear-gradient(0deg, #EEE 0%, #EEE 100%), #F2F2F2;
+
     padding: 16px;
+    height: 80dvh;
+    display: flex;
+    align-items: end;
 
     h1 {
-        font-family: 'Tobias';
+        font-family: 'Tobias', serif;
         font-weight: thin;
         font-style: italic;
-        font-size: 2.5rem;
+        font-size: 4rem;
         line-height: 1.2;
-        margin-bottom: 20px;
+        margin-bottom: 4rem;
     }
 
     h2 {
         font-family: 'NeueMontreal';
         font-weight: bold;
-        font-size: 1rem;
-        line-height: 1.5;
-        margin-bottom: 30px;
+        max-width: 575px;
+        margin-bottom: 0px;
+        font-size: 1.25rem;
+        line-height: 150%;
+        letter-spacing: -0.0275rem;
     }
 
     p {
         font-family: 'NeueMontreal';
         font-weight: normal;
-        font-size: 1rem;
-        line-height: 1.5;
-        margin-bottom: 30px;
+        max-width: 575px;
+        margin-bottom: 40px;
+        font-size: 1.25rem;
+        line-height: 150%;
+        letter-spacing: -0.0275rem;
     }
 }
 
@@ -83,8 +58,8 @@ body {
 }
 
 .section-header {
-
     width: 100%;
+    padding: 32px 16px 0px 16px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -101,7 +76,7 @@ body {
 #selectedWork-section {
 
     background-color: #ffffff;
-    padding: 16px;
+    width: 100%;
 
     h2 {
         font-family: 'NeueMontreal';
@@ -120,9 +95,29 @@ body {
         margin-bottom: 30px;
     }
 
+    ul {
+        margin-block-end: 0px;
+        margin-block-start: 0px;
+        padding-inline-start: 0px;
+    }
+
     li {
         list-style: none;
         margin: 0;
         padding: 0;
+        width: 100%;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.11);
+        border-top: 1px solid rgba(0, 0, 0, 0.11);
     }
+
+    figure {
+        margin-block-end: 0;
+        margin-block-start: 0;
+        margin-inline-end: 0;
+        margin-inline-start: 0;
+    }
+}
+
+.project-thumbnail {
+    padding: 0px 16px 0px 16px;
 }
