--- a/src/assets/css/partials/_header.scss
+++ b/src/assets/css/partials/_header.scss
@@ -1,11 +1,18 @@
 header {
 
-    background-color: white;
+    border: 1px solid rgba(0, 0, 0, 0.11);
+    background: linear-gradient(0deg, rgba(255, 227, 255, 0.01) 0%, rgba(255, 227, 255, 0.01) 100%), rgba(255, 255, 255, 0.75);
+    background-blend-mode: lighten, normal;
+    backdrop-filter: blur(100px);
     width: 100%;
+    position: fixed;
 
     nav {
-        background-color: white;
-        border-bottom: 1px solid rgba(0, 0, 0, 0.11);
+        display: flex;
+        height: 88px;
+        justify-content: space-between;
+        align-items: center;
+        align-self: stretch;
 
         ul {
             list-style: none;
