--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -7,4 +7,5 @@
     "partials/header",
     "partials/footer",
     "partials/content",
-    "partials/fonts";
+    "partials/fonts",
+    "partials/index";
