--- a/src/assets/css/partials/_header.scss
+++ b/src/assets/css/partials/_header.scss
@@ -1,12 +1,12 @@
 header {
 
-    border: 1px solid rgba(0, 0, 0, 0.11);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.11);
     background: linear-gradient(0deg, rgba(255, 227, 255, 0.01) 0%, rgba(255, 227, 255, 0.01) 100%), rgba(255, 255, 255, 0.75);
     background-blend-mode: lighten, normal;
     backdrop-filter: blur(100px);
 
     width: 100%;
-    height: 88px;
+    height: 64px;
     position: fixed;
     display: flex;
     justify-content: space-between;
@@ -43,6 +43,8 @@ header {
 
 }
 
+
+  
 
 @media (min-width: 768px) {
     header {
