Updated About and Work pages

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -8,4 +8,7 @@
     "partials/footer",
     "partials/content",
     "partials/fonts",
-    "partials/index";
+
+    "partials/pg-work",
+    "partials/pg-about",
+    "partials/pg-index";
