Creates case study template

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -11,4 +11,6 @@
 
     "partials/pg-work",
     "partials/pg-about",
-    "partials/pg-index";
+    "partials/pg-index",
+    
+    "partials/pg-casestudy";
