--- a/src/assets/css/partials/_footer.scss
+++ b/src/assets/css/partials/_footer.scss
@@ -12,6 +12,7 @@ footer {
 
 #footer-content {
 
+    display: None;
     padding: 32px 16px 16px 16px;
 
     ul {
@@ -36,7 +37,7 @@ footer {
         color: #000;
         font-family: "NeueMontreal";
         text-decoration: none;
-        font-size: 1.25rem;
+        font-size: 1.125rem;
         font-style: normal;
         font-weight: 500;
         line-height: 150%; /* 1.875rem */
@@ -50,7 +51,7 @@ footer {
 
 #footer-copyright {
 
-    padding: 0 0 16px 16px;
+    padding: 16px;
 
     p {
         color: #2A2A2A;
