--- a/src/assets/css/partials/_header.scss
+++ b/src/assets/css/partials/_header.scss
@@ -72,8 +72,6 @@
     }
 }
 
-
-
 /* hamburguer */
 
   
@@ -108,3 +106,57 @@
     -webkit-transform: rotate(45deg) translate(0px, -6px);
     transform: rotate(45deg) translate(0px, -6px);
   }
+
+
+/* mobile*/
+
+#mobile-menu {
+  position: fixed;
+  top: -100%;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: #0a0a0a;
+  color: white;
+  z-index: 30;
+  transition: top 0.5s ease-in-out;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+
+  .menu-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 2rem;
+  }
+
+  ul {
+    list-style: none;
+    padding: 0;
+
+    li {
+      margin: 1.5rem 0;
+
+      a {
+        color: white;
+        text-decoration: none;
+        font-size: 1.3rem;
+        font-weight: 400;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+}
+
+#mobile-menu.open {
+  top: 0;
+}
+
+#overlay.active {
+  opacity: 1;
+  pointer-events: auto;
+}
