--- a/src/assets/css/partials/_pg-index.scss
+++ b/src/assets/css/partials/_pg-index.scss
@@ -45,24 +45,6 @@
 }
 
 
-
-
-.section-header {
-    max-width: 100%;
-    padding: 32px 16px 0px 16px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: baseline;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.11);
-
-    .button {
-        display: inline-block;
-        text-decoration: none;
-        color: #2A2A2A;
-    }
-}
-
 #selectedWork-section {
 
     background-color: #FAFAFA;
@@ -79,7 +61,7 @@
 
     h3 {
         font-family: 'NeueMontreal';
-        font-size: 1.5rem;
+        font-size: 1.25rem;
         font-style: normal;
         font-weight: 500;
         line-height: 150%; /* 2.25rem */
@@ -88,7 +70,7 @@
 
     p {
         font-family: 'NeueMontreal';
-        font-size: 1.25rem;
+        font-size: 1.125rem;
         font-style: 100;
         font-weight: 400;
         line-height: 150%; /* 1.875rem */
@@ -128,5 +110,10 @@
     .project-button {
         display: none;
     }
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
 }
 
