--- a/src/assets/css/partials/_fonts.scss
+++ b/src/assets/css/partials/_fonts.scss
@@ -1,39 +1,47 @@
 
 @font-face {
     font-family: 'NeueMontreal';
-    src: url('/src/assets/fonts/NeueMontreal/PPNeueMontreal-Book.woff') format('woff');
-    font-weight: normal;
+    src: url('/src/assets/fonts/NeueMontreal/PPNeueMontreal-Thin.woff2') format('woff2');
+    font-weight: 100;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
     font-family: 'NeueMontreal';
-    src: url('/src/assets/fonts/NeueMontreal/PPNeueMontreal-Medium.woff') format('woff');
-    font-weight: medium;
+    src: url('/src/assets/fonts/NeueMontreal/PPNeueMontreal-Light.woff2') format('woff2');
+    font-weight: 300;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
     font-family: 'NeueMontreal';
-    src: url('/src/assets/fonts/NeueMontreal/PPNeueMontreal-Bold.woff') format('woff');
-    font-weight: bold;
+    src: url('/src/assets/fonts/NeueMontreal/PPNeueMontreal-Book.woff2') format('woff2');
+    font-weight: 500;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
     font-family: 'NeueMontreal';
-    src: url('/src/assets/fonts/NeueMontreal/PPNeueMontreal-Italic.woff') format('woff');
-    font-weight: normal;
-    font-style: italic;
+    src: url('/src/assets/fonts/NeueMontreal/PPNeueMontreal-Medium.woff2') format('woff2');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'NeueMontreal';
+    src: url('/src/assets/fonts/NeueMontreal/PPNeueMontreal-Bold.woff2') format('woff2');
+    font-weight: 900;
+    font-style: normal;
     font-display: swap;
 }
 
 @font-face {
     font-family: 'Tobias';
-    src: url('/src/assets/fonts/Tobias/TobiasTRIAL-ThinItalic.woff') format('woff');
+    src: url('/src/assets/fonts/Tobias/TobiasTRIAL-ThinItalic.woff') format('woff2');
     font-weight: thin;
     font-style: italic;
     font-display: swap;
