--- a/src/assets/css/partials/_pg-index.scss
+++ b/src/assets/css/partials/_pg-index.scss
@@ -16,27 +16,28 @@
         font-style: italic;
         font-size: 4rem;
         line-height: 1.2;
+        letter-spacing: -0.025rem;
         margin-bottom: 4rem;
     }
 
     h2 {
         font-family: 'NeueMontreal', sans-serif;
-        font-weight: medium;
+        font-weight: 700;
         max-width: 575px;
         margin-bottom: 0px;
-        font-size: 1.25rem;
+        font-size: 1.125rem;
         line-height: 150%;
-        letter-spacing: -0.0275rem;
+        letter-spacing: -0.025rem;
     }
 
     p {
         font-family: 'NeueMontreal', sans-serif;
-        font-weight: normal;
+        font-weight: 300;
         max-width: 575px;
         margin-bottom: 40px;
-        font-size: 1.25rem;
+        font-size: 1.125rem;
         line-height: 150%;
-        letter-spacing: -0.0275rem;
+        letter-spacing: -0.025rem;
     }
 }
 
@@ -49,31 +50,24 @@
 
     background-color: #FAFAFA;
     width: 100%;
-
-    h2 {
-        font-family: 'NeueMontreal';
-        font-weight: normal;
-        display: inline-block;
-        font-size: 2rem;
-        line-height: 1.5;
-        margin-bottom: 30px;
-    }
-
+    
     h3 {
         font-family: 'NeueMontreal';
-        font-size: 1.25rem;
+        font-weight: 700;
         font-style: normal;
         font-weight: 500;
-        line-height: 150%; /* 2.25rem */
+        line-height: 150%;
         letter-spacing: -0.03rem;
     }
 
     p {
         font-family: 'NeueMontreal';
+        font-weight: 700;
+        font-style: normal;
         font-size: 1.125rem;
         font-style: 100;
         font-weight: 400;
-        line-height: 150%; /* 1.875rem */
+        line-height: 150%;
 
     }
 
