--- a/src/assets/css/partials/_content.scss
+++ b/src/assets/css/partials/_content.scss
@@ -25,11 +25,12 @@ html {
 
 :root {
 
-    /* ---- color level 1 - primitives ---- */
+
+    /* ---- color level 0 - primitives ---- */
 
     --neutral-00: hsl(0, 0%, 100%);
     --neutral-02: hsl(0, 0%, 98%);
-    --neutral-05: hsl(0, 0%, 95%);
+    --neutral-05: hsl(0, 0%, 93%);
     --neutral-10: hsl(0, 0%, 90%);
     --neutral-20: hsl(0, 0%, 80%);
     --neutral-30: hsl(0, 0%, 70%);
@@ -38,10 +39,102 @@ html {
     --neutral-60: hsl(0, 0%, 40%);
     --neutral-70: hsl(0, 0%, 30%);
     --neutral-80: hsl(0, 0%, 20%);
+    --neutral-85: hsl(0, 0%, 16%);
     --neutral-90: hsl(0, 0%, 10%);
-    --neutral-95: hsl(0, 0%, 5%);
-    --neutral-98: hsl(0, 0%, 2);
     --neutral-100: hsl(0, 0%, 0%);
+
+    --pink-10: hsl(311, 100%, 90%);
+    --pink-20: hsl(311, 100%, 80%);
+    --pink-30: hsl(311, 100%, 70%);
+    --pink-40: hsl(311, 100%, 60%);
+    --pink-50: hsl(311, 100%, 50%);
+    --pink-60: hsl(311, 100%, 40%);
+    --pink-70: hsl(311, 100%, 30%);
+    --pink-80: hsl(311, 100%, 20%);
+    --pink-90: hsl(311, 100%, 10%);
+
+
+
+    /* ---- color level 1 - semantic ---- */
+
+    --primary-00: var(--neutral-00);
+    --primary-05: var(--neutral-05);
+    --primary-10: var(--neutral-10);
+    --primary-20: var(--neutral-20);
+    --primary-30: var(--neutral-30);
+    --primary-40: var(--neutral-40);
+    --primary-50: var(--neutral-50);
+    --primary-60: var(--neutral-60);
+    --primary-70: var(--neutral-70);
+    --primary-80: var(--neutral-80);
+    --primary-85: var(--neutral-85);
+    --primary-90: var(--neutral-85);
+    --primary-100: var(--neutral-100);
+    
+
+    --accent-10: var(--pink-10);
+    --accent-20: var(--pink-20);
+    --accent-30: var(--pink-30);
+    --accent-40: var(--pink-40);
+    --accent-50: var(--pink-50);
+    --accent-60: var(--pink-60);
+    --accent-70: var(--pink-70);
+    --accent-80: var(--pink-80);
+    --accent-90: var(--pink-90);
+
+
+
+    /* ---- color level 2 - system ---- */
+
+    /* type / body */
+
+    --clr-type-body: var(--neutral-85);
+    --clr-type-body-disabled: var(--neutral-50);
+
+    --clr-type-body-inv: var(--neutral-05);
+    --clr-type-body-disabled-inv: var(--neutral-50);
+
+
+    /* type / links */
+
+    --clr-type-link-enabled: var(--neutral-85);
+    --clr-type-link-hover: var(--accent-60);
+    --clr-type-link-focus: var(--accent-60);
+    --clr-type-link-pressed: var(--accent-70);
+    --clr-type-link-disabled: var(--neutral-50);
+
+    --clr-type-link-inverted: var(--neutral-05);
+
+    /* surfaces */
+
+    --clr-bg-pri: var(--neutral-02);
+    --clr-bg-sec: var(--neutral-05);
+
+    /* icons */
+
+    --clr-icon-enabled: var(--neutral-85);
+    --clr-icon-hover: var(--acccent-60);
+    --clr-icon-focus: var(--accent-60);
+    --clr-icon-pressed: var(--accent-70);
+    --clr-icon-disabled: var(--neutral-50);
+
+    --clr-icon-inverted: var(--neutral-05);
+
+    /* buttons */
+
+    --clr-button-pri-enabled: var(--neutral-00);
+    --clr-button-pri-hover: var(--neutral-10);
+    --clr-button-pri-focus: var(--neutral-10);
+    --clr-button-pri-pressed: var(--neutral-20);
+    --clr-button-pri-disabled: var(--neutral-00);
+
+    /* borders */
+
+    --clr-border-enabled: var(--neutral-10);
+    --clr-border-subtle: var(--neutral-20);
+
+
+    /* ---- other variables ---- */
 
     /* type family*/
     --font-display: "Tobias", serif;
@@ -69,10 +162,10 @@ html {
     --space-huge: 80px;
 
    /* border radius */
-   --radius-xs: 4px;
    --radius-s: 8px;
    --radius-m: 16px;
    --radius-l: 32px;
+   --radius-full: 1000px;
 
 }
 
@@ -81,11 +174,137 @@ html {
 
 
 body {
-    background-color: #FAFAFA;
-    font-family: 'NeueMontreal';
     margin: 0 auto;
-    color: #2A2A2A;
+    background-color: var(--clr-bg-pri);
+
+    font-family: var(--font-body);
+    color: var(--clr-type-body);
 }
+
+section {
+    width: 100%;
+    margin: 0 auto;
+    padding: var(--space-xxxl) 0;
+    background-color: var(--clr-bg-pri);
+}
+
+.container {
+    width: 100%;
+    max-width: 1400px;
+    margin: 0 auto;
+    padding: 0 var(--space-l);
+}
+
+
+
+
+/* -------------------------- Typography -------------------------- */
+
+
+//h1 {
+    font-family: var(--font-headings);
+    font-weight: 100;
+}
+
+
+//h2, h3, h4 {
+    font-family: var(--font-headings);
+    font-weight: 100;
+}
+
+//h1 {
+    font-size: var(--type-xxxl);
+    color: var(--clr-white);
+    text-transform: uppercase;
+}
+
+//h2 {
+    font-size: var(--type-xxl);
+    color: var(--clr-type-body);
+}
+
+//h3 {
+    font-size: var(--type-xl);
+    color: var(--clr-type-body);
+    text-transform: uppercase;
+}
+
+//h4 {
+    font-size: var(--type-l);
+    color: var(--clr-type-body);
+    text-transform: uppercase;
+}
+
+
+//p, a {
+    color: var(--clr-type-body);
+}
+
+//p {
+    font-weight: 100;
+    font-family: var(--font-body);
+    font-size: var(--type-m);
+}
+
+
+//a {
+    color: var(--clr-type-link-enabled);
+    text-decoration: none;
+    font-family: var(--font-headings);
+    font-size: var(--type-m);
+}
+
+//a:hover {
+    color: var(--clr-type-link-hover);
+}
+
+
+
+
+
+/* -------------------------- buttons -------------------------- */
+
+
+//button, .button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: var(--font-buttons);
+    color: var(--clr-white);
+
+    background-color: var(--clr-button-pri-enabled);
+    border: none;
+
+    border-radius: var(--radius-s);
+    padding: var(--space-xs) var(--space-s);
+
+    cursor: pointer;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: all 0.25s ease-in-out; 
+}
+
+//button:hover {
+    transform: scale(1.025) translateY(-1px);
+    background-color: var(--clr-button-pri-hover);
+}
+
+//button:focus {
+    background-color: var(--clr-button-pri-focus);
+}
+
+//button:active {
+    background-color: var(--clr-button-pri-pressed);
+}
+
+//button:disabled {
+    background-color: var(--clr-button-pri-disabled);
+}
+
+
+
+
+
+
 
 .primary-button {
     
@@ -141,6 +360,12 @@ body {
     }   
 }
 
+
+
+
+
+
+!
 
 /* -------------------------- appear animation --------------------------  */
 
