--- a/src/assets/css/partials/_pg-index.scss
+++ b/src/assets/css/partials/_pg-index.scss
@@ -1,23 +1,15 @@
 #hero-section {
 
-    background:
-        radial-gradient(87.7% 67.58% at 36.85% 100%, rgba(255, 140, 0, 0.20) 0%, rgba(255, 255, 255, 0.00) 100%),
-        radial-gradient(164.48% 79.58% at 8.96% 100%, rgba(255, 0, 255, 0.20) 0%, rgba(255, 255, 255, 0.00) 100%),
-        linear-gradient(0deg, #EEE 0%, #EEE 100%), #F2F2F2;
-
-    padding: 16px;
-    height: 80svh;
     display: flex;
     align-items: end;
 
-    h1 {
-        font-family: 'Tobias', serif;
-        font-weight: 100;
-        font-style: italic;
-        font-size: 4rem;
-        line-height: 1.2;
-        letter-spacing: -0.025rem;
-        margin-bottom: 4rem;
+    background: var(--clr-bg-hero);
+    padding: var(--space-s);
+    height: 80svh;
+
+    .hero-container {
+        display: flex;
+        align-items: end;
     }
 
     h2 {
@@ -47,9 +39,6 @@
 
 
 #selectedWork-section {
-
-    background-color: #FAFAFA;
-    width: 100%;
     
     h3 {
         font-family: 'NeueMontreal';
@@ -93,11 +82,11 @@
     }
 
     img {
-        border-radius: 8px;
+        border-radius: var(--radius-s);
     }
 
     .project-thumbnail {
-        padding: 0px 16px 0px 16px;
+        padding: 0px var(--space-s);
     }
 
     .project-tags,
