--- a/src/assets/css/partials/_content.scss
+++ b/src/assets/css/partials/_content.scss
@@ -112,6 +112,8 @@ html {
     --clr-bg-hero: radial-gradient(87.7% 67.58% at 36.85% 100%, rgba(255, 140, 0, 0.20) 0%, rgba(255, 255, 255, 0.00) 100%),
         radial-gradient(164.48% 79.58% at 8.96% 100%, rgba(255, 0, 255, 0.20) 0%, rgba(255, 255, 255, 0.00) 100%),
         linear-gradient(0deg, #EEE 0%, #EEE 100%), #F2F2F2;
+    --clr-bg-hero2: linear-gradient(-45deg, #EEE, #f38fb5, #EEE, #EEE);
+
 
     /* icons */
 
