--- a/src/assets/css/partials/_header.scss
+++ b/src/assets/css/partials/_header.scss
@@ -78,8 +78,8 @@
   
 .hamburger  {
     position: fixed;
-    top:20px;
-    right: 16px;
+    top: var(--space-m);
+    right: var(--space-xl);
     display: inline-block;
     z-index: 1001;
 
@@ -160,7 +160,7 @@
       width: 100%;
       display: flex;
       justify-content: space-between;
-      padding: var(--space-s) 0;
+      padding: var(--space-s) var(--space-s);
     }
 
   }
