--- a/src/assets/css/partials/_pg-index.scss
+++ b/src/assets/css/partials/_pg-index.scss
@@ -1,64 +1,37 @@
 #hero-section {
-
+    position: sticky;
+    top: 0;
     display: flex;
     align-items: end;
+    z-index: -10;
 
-    background: var(--clr-bg-hero);
-    padding: var(--space-s);
-    height: 80svh;
+    background: var(--clr-bg-gradient);
+    padding: var(--space-xxxl) var(--space-xs);
+    height: 100svh;
 
     .hero-container {
         display: flex;
-        align-items: end;
+        flex-direction: column;
+        align-items: start;
+    }
+
+    #hero-description {
+        max-width: 575px;
     }
 
     h2 {
-        font-family: 'NeueMontreal', sans-serif;
         font-weight: 700;
-        max-width: 575px;
-        margin-bottom: 0px;
+
         font-size: 1.125rem;
         line-height: 150%;
         letter-spacing: -0.025rem;
     }
 
-    p {
-        font-family: 'NeueMontreal', sans-serif;
-        font-weight: 300;
-        max-width: 575px;
-        margin-bottom: 40px;
-        font-size: 1.125rem;
-        line-height: 150%;
-        letter-spacing: -0.025rem;
-    }
-}
 
-#hero-details {
-    display: none;
 }
 
 
 #selectedWork-section {
-    
-    h3 {
-        font-family: 'NeueMontreal';
-        font-weight: 700;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 150%;
-        letter-spacing: -0.03rem;
-    }
-
-    p {
-        font-family: 'NeueMontreal';
-        font-weight: 700;
-        font-style: normal;
-        font-size: 1.125rem;
-        font-style: 100;
-        font-weight: 400;
-        line-height: 150%;
-
-    }
 
     ul {
         margin-block-end: 0px;
@@ -69,9 +42,9 @@
     li {
         list-style: none;
         margin: 0;
-        padding: 32px 0;
+        padding: var(--space-xl) 0;
         width: 100%;
-        border-bottom: 1px solid rgba(0, 0, 0, 0.11);
+        border-bottom: 1px solid var(--clr-border-enabled);
     }
 
     figure {
@@ -86,17 +59,12 @@
     }
 
     .project-thumbnail {
-        padding: 0px var(--space-s);
+        padding: 0px var(--space-xl);
     }
 
     .project-tags,
     .project-button {
         display: none;
     }
-}
-
-a {
-    text-decoration: none;
-    color: inherit;
 }
 
