--- a/src/assets/css/partials/_content.scss
+++ b/src/assets/css/partials/_content.scss
@@ -32,6 +32,7 @@ html {
 
     --neutral-00: hsl(0, 0%, 100%);
     --neutral-02: hsl(0, 0%, 98%);
+    --neutral-03: hsl(0, 0%, 96%);
     --neutral-05: hsl(0, 0%, 93%);
     --neutral-10: hsl(0, 0%, 90%);
     --neutral-20: hsl(0, 0%, 80%);
@@ -60,6 +61,8 @@ html {
     /* ---- color level 1 - semantic ---- */
 
     --primary-00: var(--neutral-00);
+    --primary-02: var(--neutral-02);
+    --primary-03: var(--neutral-03);
     --primary-05: var(--neutral-05);
     --primary-10: var(--neutral-10);
     --primary-20: var(--neutral-20);
@@ -90,27 +93,28 @@ html {
 
     /* type / body */
 
-    --clr-type-body: var(--neutral-85);
-    --clr-type-body-disabled: var(--neutral-50);
+    --clr-type-body: var(--primary-85);
+    --clr-type-body-disabled: var(--primary-50);
 
-    --clr-type-body-inv: var(--neutral-05);
-    --clr-type-body-disabled-inv: var(--neutral-50);
+    --clr-type-body-inv: var(--primary-05);
+    --clr-type-body-disabled-inv: var(--primary-50);
 
 
     /* type / links */
 
-    --clr-type-link-enabled: var(--neutral-85);
+    --clr-type-link-enabled: var(--primary-85);
     --clr-type-link-hover: var(--accent-60);
     --clr-type-link-focus: var(--accent-60);
     --clr-type-link-pressed: var(--accent-70);
-    --clr-type-link-disabled: var(--neutral-50);
+    --clr-type-link-disabled: var(--primary-50);
 
-    --clr-type-link-inverted: var(--neutral-05);
+    --clr-type-link-inverted: var(--primary-05);
 
     /* surfaces */
 
-    --clr-bg-pri: var(--neutral-02);
-    --clr-bg-sec: var(--neutral-05);
+    --clr-bg-pri: var(--primary-02);
+    --clr-bg-sec: var(--primary-05);
+    --clr-bg-hover: var(--primary-03);
     --clr-bg-gradient: radial-gradient(87.7% 67.58% at 36.85% 100%, rgba(255, 140, 0, 0.20) 0%, rgba(255, 255, 255, 0.00) 100%),
         radial-gradient(164.48% 79.58% at 8.96% 100%, rgba(255, 0, 255, 0.20) 0%, rgba(255, 255, 255, 0.00) 100%),
         linear-gradient(0deg, #EEE 0%, #EEE 100%), #F2F2F2;
@@ -209,6 +213,7 @@ section {
         flex-direction: row;
         justify-content: space-between;
         align-items: baseline;
+        padding: 0 var(--space-xs);
     }
 
     a {
@@ -247,7 +252,7 @@ h2 {
 }
 
 h3 {
-    font-weight: 700;
+    font-weight: 500;
 
     font-size: var(--type-l);
     line-height: 150%;
@@ -277,29 +282,29 @@ a {
 
 
 
+
 .primary-button {
     
     display: flex;
-    padding: 0.75rem 1.25rem;
+    width: 100%;
+    cursor: pointer;
+    padding: 0.85rem 1.25rem;
     justify-content: center;
     align-items: center;
     gap: 0.625rem;
 
     border-radius: 1rem;
-    border: 1px solid #EDEDED;
+    border: 1px solid var(--clr-border-enabled);
+    outline: 0px solid rgba(255, 118, 230, 0.00);
     background: #FFF;
     box-shadow: 0px 0px 23.3px 0px rgba(0, 0, 0, 0.04);
 
-    a {
-        color: #2A2A2A;
-        font-family: "NeueMontreal";
-        font-size: 1.125rem;
-        font-style: 100;
-        font-weight: 500;
-        line-height: 150%;
-        letter-spacing: -0.0125rem;
-        text-decoration: none;
-    }
+    font-weight: 100;
+    font-size: var(--type-m);
+    line-height: 130%;
+    letter-spacing: -0.025rem;
+
+    transition: all 0.1s ease-in-out;
 }
 
 
@@ -317,4 +322,24 @@ a {
     opacity: 1;
     filter: blur(0px);
     transform: translateY(0);
+}
+
+
+@media (min-width: 768px) {
+
+    a:hover,
+    a:focus {
+        color: var(--accent-40);
+    }
+
+    .primary-button {
+
+        width: auto;
+
+        &:hover {
+            border: 1px solid rgba(255, 118, 230, 0.65);
+            outline: 4px solid rgba(255, 118, 230, 0.40);
+            box-sizing: border-box;
+        }
+    }
 }
