--- a/src/assets/css/partials/_footer.scss
+++ b/src/assets/css/partials/_footer.scss
@@ -1,66 +1,15 @@
 footer {
-    background: #EEE;
+    background: var(--clr-bg-sec);
 
-    display: flex;
-    padding: 0;
-    flex-direction: column;
-    justify-content: start;
-    align-items: start;
-    align-self: stretch;
-
-}
-
-#footer-content {
-
-    display: None;
-    padding: 32px 16px 16px 16px;
-
-    ul {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-        gap: 16px;
-        align-self: stretch;
-        margin-block-end: 0px;
-        margin-block-start: 0px;
-        padding-inline-start: 0px;
-    }
-
-    li {
-        list-style: none;
-        display: flex;
-        flex-direction: row;
-    }
-
-    a {
-        color: #000;
-        font-family: "NeueMontreal";
-        text-decoration: none;
-        font-size: 1.125rem;
-        font-style: normal;
-        font-weight: 500;
-        line-height: 150%; /* 1.875rem */
-    } 
-
-    .material-symbols-outlined {
-        bottom: -10px;
-    }
 }
 
 
 #footer-copyright {
 
-    padding: 16px;
+    padding: var(--space-s) 0;
 
     p {
-        color: #2A2A2A;
-        font-family: "NeueMontreal";
-        font-size: 0.875rem;
-        font-style: normal;
+        font-size: var(--type-s);
         font-weight: 500;
-        line-height: 150%; /* 1.3125rem */
-        letter-spacing: -0.00875rem;
     } 
-
 }
