--- a/src/assets/css/partials/_header.scss
+++ b/src/assets/css/partials/_header.scss
@@ -33,6 +33,7 @@
         ul {
             list-style: none;
             display: flex;
+            gap: var(--space-xs);
             padding: 0;
             margin: 0;
 
@@ -43,8 +44,6 @@
 
         a {
             text-decoration: none;
-            color: #2A2A2A;
-            padding: 10px 15px; // Add padding for better clickability
         }
     }
 
@@ -181,7 +180,7 @@
         nav {
             a {
                 &:hover {
-                    border-bottom: 1px solid #CF00A9;
+                  color: var(--accent-40);
                 }
             }
         }
