--- a/src/assets/css/partials/_pg-index.scss
+++ b/src/assets/css/partials/_pg-index.scss
@@ -48,8 +48,13 @@
         padding: 0 0;
         width: 100%;
         border-bottom: 1px solid var(--clr-border-enabled);
+        background-color: var(--clr-bg-pri);
+        transition: all 0.2s ease-in-out;
 
-        a {
+        a,
+        a:hover,
+        a:focus {
+            color: var(clr-type-link-enabled);
             width: 100%;
         }
     }
@@ -66,40 +71,93 @@
     }
 
     .project-thumbnail {
-        width: 100%;
         display: flex;
         flex-direction: column-reverse;
         justify-content: center;
         align-items: start;
         gap: var(--space-s);
-        width: 100%;
-        padding: var(--space-xl) var(--space-xl);
 
-        .project-details {
+        width: 100%;
+        padding: var(--space-xl) var(--space-m);
+
+
+        .project-content {
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: start;
-            gap: var(--space-xs);
+            gap: var(--space-l);
+
+            .project-details {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: start;
+                gap: 0;
+
+                .project-tags {
+                    display: flex;
+                    flex-wrap: wrap;
+                    gap: var(--space-xxs);
+
+                    .tag {
+                        padding: var(--space-xxs) var(--space-xs);
+                        background-color: var(--clr-bg-sec);
+                        border-radius: var(--radius-s);
+                        font-size: var(--type-xs);
+                        line-height: 150%;
+                        font-weight: 500;
+                        letter-spacing: 0.0125rem;
+                        text-transform: camel-case;
+                    }
+                }
+
+            }
+
+            p {
+                display: none;
+            }
         }
     }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 900px) {
 
     #selectedWork-section {
         ul {
-            .project-thumbnail {
-                display: grid;
-                align-items: center;
-                column-gap: 128px;
-                width: 100%;
-            }
-            }
-        }
+                li:hover {
+                    background-color: var(--clr-bg-hover);
 
-    .project-tags,
-    .project-button {
-        display: block;
-    }
+                    a {
+                        color: var(--clr-type-body);
+                    }
+                }
+
+                .project-thumbnail {
+                    display: grid;
+                    grid-template-columns: 4fr 6fr;
+                    grid-template-rows: 1fr;
+                    align-items: center;
+                    gap: 20px;
+                    }
+
+                    .project-content {
+                        max-width: 350px;
+                        height: 100%;
+                        max-height: 275px;
+                        justify-content: space-between;
+
+                        .project-details {
+                            flex-direction: column-reverse;
+
+                            h3 {
+                                font-size: var(--type-xl);
+                                line-height: 150%;
+                                letter-spacing: -0.03rem;
+                            }
+                        }
+                    }
+                }
+
+                }
 }
