--- a/src/assets/css/partials/_pg-index.scss
+++ b/src/assets/css/partials/_pg-index.scss
@@ -121,6 +121,68 @@
     }
 }
 
+
+/* -------------------------- Slideshow --------------------------  */
+
+.slideshow-container {
+  max-width: 1000px;
+  width: 100%;
+  height: auto;
+  position: relative;
+  margin: auto;
+  pointer-events: none;
+}
+
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+    position: absolute;
+    pointer-events: auto;
+    cursor: pointer;
+    top: 50%;
+
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border-radius: 1000px;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.16); 
+    user-select: none;
+
+    background-color: rgba(0,0,0,1);
+    transition: all 0.3s ease;
+    z-index: 1000;
+
+ a {
+    margin: 0 auto;
+    padding: 0 0;
+  }
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 8px;
+}
+
+.prev {
+  left: 8px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,1);
+}
+
+
+
+
+
+
 @media (min-width: 900px) {
 
     #selectedWork-section {
